--- a/personaltrainerapp/package.json
+++ b/personaltrainerapp/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.2.0",
     "ag-grid-react": "^33.2.4",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
