--- a/personaltrainerapp/package.json
+++ b/personaltrainerapp/package.json
@@ -17,13 +17,19 @@
     "ag-grid-react": "^33.2.4",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.10",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
